// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly change the button based on the status 1`] = `
<button
  className="js-confirm"
  onClick={[Function]}
>
  save
</button>
`;

exports[`should correctly change the button based on the status 2`] = `
<button
  className="js-confirm"
  onClick={[Function]}
>
  marketplace.install
</button>
`;

exports[`should display correctly 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="marketplace.install_x.Foo"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      marketplace.install_x.Foo
    </h2>
  </header>
  <LicenseEditionSet
    className="modal-body"
    edition={
      Object {
        "desc": "Foo desc",
        "download_link": "download_url",
        "key": "foo",
        "more_link": "more_url",
        "name": "Foo",
        "request_license_link": "license_url",
      }
    }
    updateLicense={[Function]}
  />
  <footer
    className="modal-foot"
  >
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;
